src/test/resources/syntax/invalid/group_definition_invalid_format.unpick
unpick v3
group int
    @format foo